--- a/map-commands.html
+++ b/map-commands.html
@@ -75,8 +75,8 @@
 <a href="https://steamcommunity.com/workshop/filedetails/?id=1646203073" rel="noopener noreferrer nofollow">Chernobyl: Chapter One</a>
 <p>callvote ChangeMission Chernobyl</p>
 
-<!-- Carnival 6 Maps (Wannamingo) -->
-<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (Updated 8 Jan @ 8:20pm)</a></h2>
+<!-- (Inactive) Carnival 6 Maps (Wannamingo) -->
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">(Inactive) Carnival 6 Maps (Wannamingo) (Updated 8 Jan @ 8:20pm)</a></h2>
 
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121086524" rel="noopener noreferrer nofollow">Urban Flight</a>
 <p>callvote ChangeMission urbanflight</p>
@@ -159,8 +159,8 @@
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2257961887" rel="noopener noreferrer nofollow">Time to Die</a>
 <p>callvote ChangeMission TimeKHMC</p>
 
-<!-- Carnival 6 Maps (Wannamingo) -->
-<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">Carnival 6 Maps (Wannamingo) (Updated 19 Nov @ 3:02pm)</a></h2>
+<!-- (Inactive) Carnival 6 Maps (Wannamingo) -->
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">(Inactive) Carnival 6 Maps (Wannamingo) (Updated 19 Nov @ 3:02pm)</a></h2>
 
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121221044" rel="noopener noreferrer nofollow">Beldurra</a>
 <p>callvote ChangeMission Beldurra</p>
@@ -227,10 +227,10 @@
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2274787444" rel="noopener noreferrer nofollow">Buried Deep</a>
 <p>callvote ChangeMission BuriedDeep</p>
 
-<!-- Carnival 7 Maps (inactive) -->
-<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer nofollow">Carnival 7 Maps (inactive)</a></h2>
+<!-- (Inactive) Carnival 7 Maps -->
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer nofollow">(Inactive) Carnival 7 Maps</a></h2>
 
 <!-- Carnival 8 Maps (inactive) -->
-<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380" rel="noopener noreferrer nofollow">Carnival 8 Maps (inactive)</a></h2>
+<h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1769534380" rel="noopener noreferrer nofollow">(Inactive) Carnival 8 Maps</a></h2>
 </body>
 </html>
