--- a/map-commands.html
+++ b/map-commands.html
@@ -9,6 +9,7 @@
 		a:link, a:visited {text-decoration: none; color: #fcba03;}
 		a:hover, a:active {text-decoration: none; color: #fcdf03;}
 		p {margin-top: 0; margin-bottom: 0; color: #808080;}
+		details {color: #fcba03; cursor: pointer;}
 	</style>
 </head>
 
@@ -78,6 +79,8 @@
 <!-- (Inactive) Carnival 6 Maps (Wannamingo) -->
 <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">(Inactive) Carnival 6 Maps (Wannamingo) (Updated 8 Jan @ 8:20pm)</a></h2>
 
+<details>
+<summary>Maps:</summary>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121086524" rel="noopener noreferrer nofollow">Urban Flight</a>
 <p>callvote ChangeMission urbanflight</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121221044" rel="noopener noreferrer nofollow">Beldurra</a>
@@ -158,10 +161,13 @@
 <p>callvote ChangeMission TheHive</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2257961887" rel="noopener noreferrer nofollow">Time to Die</a>
 <p>callvote ChangeMission TimeKHMC</p>
+</details>
 
 <!-- (Inactive) Carnival 6 Maps (Wannamingo) -->
 <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1824087131" rel="noopener noreferrer nofollow">(Inactive) Carnival 6 Maps (Wannamingo) (Updated 19 Nov @ 3:02pm)</a></h2>
 
+<details>
+<summary>Maps:</summary>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=121221044" rel="noopener noreferrer nofollow">Beldurra</a>
 <p>callvote ChangeMission Beldurra</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1880838761" rel="noopener noreferrer nofollow">Blood Tracks Official</a>
@@ -226,6 +232,7 @@
 <p>callvote ChangeMission Z3r04Bs0lut3971</p>
 <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2274787444" rel="noopener noreferrer nofollow">Buried Deep</a>
 <p>callvote ChangeMission BuriedDeep</p>
+</details>
 
 <!-- (Inactive) Carnival 7 Maps -->
 <h2><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1755147614" rel="noopener noreferrer nofollow">(Inactive) Carnival 7 Maps</a></h2>
